# Parallel-Computing-Force-Between-Particles

./: CMakeLists.txt  README.md  common.h  debug.txt  main.cpp  main_mpi.cpp  mpi.txt  mpi_1.txt  particles-student-1.csv:Zone.Identifier  test_outputs.py  tests.cpp  wrapper.py
